change color for name

--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,7 @@ p{
     color: #ffffff;
     font-size: 30px;
     padding: 3px 8px;
-    background: rgba(0, 0, 0, 0.28);
+    background: rgb(21, 120, 149);
     margin: -10px;
     margin-bottom: 15px;
     text-align: center;
