--- a/css/index.css
+++ b/css/index.css
@@ -1,30 +1,66 @@
-*{
-    font-family: sans-serif;
-    font-size: 16px;
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400');
+
+* {
+    font-family: Ubuntu, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
     color: #444;
     line-height: 1.4;
 }
-body{
+
+body {
     margin: 0;
 }
-h1{
+
+h1 {
     font-size: 18px;
     padding-left: 40px;
 }
-li{
+
+li {
     line-height: 2;
 }
-p{
-    text-indent: 30px;
+
+p, .wb, .cases>li {
     text-align: justify;
+    background: rgba(255, 255, 255, 0.93);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.84) 0%, rgb(233, 233, 233) 100%);
+    padding: 4px 10px;
+    border-radius: 5px;
+    display: inline-block;
 }
-.center{
+
+.a1 {
+    max-width: 60%;
+}
+
+.a2 {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    max-width: 60%;
+}
+
+.a3 {
+    max-width: 60%;
+    margin-left: auto;
+    display: block;
+}
+
+.cases>li {
+    display: block;
+    margin: 10px;
+}
+
+.center {
     text-align: center;
 }
-.description{
+
+.description {
     padding: 10px;
     border-left: 3px solid silver;
 }
+
 .page-background {
     background-image: url(/img/page-background.jpg);
     background-color: #eaeaea;
@@ -41,74 +77,103 @@ p{
     transform: translateZ(0);
     pointer-events: none;
 }
-.page{
+
+.page {
     max-width: 800px;
     padding: 10px 10px 40px;
     margin: 35px auto;
-    background: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
-.page:last-child{
+
+.page:last-child {
     margin-bottom: 200px;
 }
-.inl{
+
+.inl {
     display: inline-block;
 }
-.link{
+
+.link {
     color: #0d5283;
     font-weight: bold;
+    display: inline-block;
+    margin-bottom: 10px;
 }
-.my-photo{
+
+.my-photo {
     width: 100%;
     max-width: 300px;
     max-height: 300px;
+    border-radius: 50%;
+    margin: 10px 0;
 }
-.my-name{
+
+.my-name {
     color: #ffffff;
     font-size: 30px;
-    padding: 3px 8px;
-    background: rgb(21, 120, 149);
-    margin: -10px;
+    padding: 15px 5px;
+    background: rgba(0, 20, 53, 0.65);
+    background: linear-gradient(135deg, rgba(15, 214, 234, 0.84) 0%, rgba(0, 20, 53, 0.65) 100%);
     margin-bottom: 15px;
     text-align: center;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
 }
-.messenger-photo{
+
+.messenger-photo {
     border-radius: 50%;
     width: 100%;
     max-width: 181px;
     max-height: 181px;
 }
-.intro-container{
-    margin: -10px;
-    margin-bottom: 20px;
-    background: rgba(132, 123, 116, 0.18);
-    line-height: 0;
-    display: flex;
+
+.intro-container {
+    margin-bottom: 60px;
+    line-height: 80px;
+    text-align: center;
 }
-.intro-info{
-    vertical-align: top;
-    padding: 10px;
-}
-.skill-badge{
+
+/*.intro-info {*/
+    /*vertical-align: top;*/
+    /*padding: 10px;*/
+/*}*/
+
+.skill-badge {
     display: inline-block;
     color: white;
     background: #2865a3;
     margin: 8px;
-    padding: 3px 8px;
+    padding: 4px 10px;
     border-radius: 3px;
-}
-.green-badge{
-    background: #207f20;
-}
-.dark-badge{
-    background: #3b3b3b;
-}
-.orange-badge{
-    background: #dc7000;
+    font-weight: 300;
 }
 
-@media (max-width: 600px)  {
-    .intro-container{
+.green-badge {
+    background: #207f20;
+}
+
+.dark-badge {
+    background: #3b3b3b;
+}
+
+.orange-badge {
+    background: #ff5e00;
+}
+
+.pink-badge {
+    background: #dc005b;
+}
+
+.revert {
+    transform: scaleY(-1);
+    line-height: inherit;
+    direction: rtl;
+}
+
+.revert div {
+    transform: scaleY(-1);
+}
+
+@media (max-width: 600px) {
+    .intro-container {
         display: block;
     }
 }
